<resources>
    <string name="app_name">Ioasys</string>
    <string name="logo_ioasys">Logo Ioasys</string>
    <string name="welcome">BEM-VINDO AO \nEMPRESAS</string>
    <string name="welcome_description">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="email">E-mail</string>
    <string name="btn_login">ENTRAR</string>
    <string name="password">Senha</string>
    <string name="login_error">Credenciais informadas são inválidas, tente novamente.</string>
    <string name="generic_error">Ocorreu um erro não tratado</string>
    <string name="empty_search">Clique na busca para iniciar.</string>
    <string name="search">Pesquisar</string>
    <string name="empty_list">Nenhuma empresa foi encontrada \npara a busca realizada</string>
    <string name="enterprise_location">%s - %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>